fix: scrollbar styling

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -1,10 +1,5 @@
 @import "tailwindcss";
 
-/* To prevent the horizontal layout shift on page overflow because of the scrollbar */
-html {
-	scrollbar-gutter: stable;
-}
-
 body {
 	color: white;
 	font-family: Arial, Helvetica, sans-serif;
@@ -24,4 +19,17 @@ input,
 textarea,
 select {
 	@apply bg-gray-900;
+}
+
+/* The scrollbar appearing and reappearing caused a horizontal layout shift */
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+	width: 0px;
+	background: transparent;
+}
+
+/* Hide scrollbar for Firefox */
+* {
+	scrollbar-width: none; /* Firefox */
+	-ms-overflow-style: none; /* IE and Edge */
 }
